# DevStore

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .project  CMakeLists.txt  Makefile  README.md  pyproject.toml  setup.cfg
devstore/: __init__.py  __starter__.py
devstore/cli/: parser.py
devstore/data/: devstore.sql
devstore/utils/: sqlite3.py
src/: config.h  config.h.in  devstore.cpp  main.cpp
src/cli/: addKey.hpp  callback.hpp  checks.hpp  delKey.hpp  listKeys.hpp
src/include/: addKey.hpp  callback.hpp  checks.hpp  delKey.hpp  global.h  listKeys.hpp
src/ui/win/DevStore/: App.xaml  App.xaml.cpp  App.xaml.h  DevStore.vcxproj  DevStore.vcxproj.filters  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest
