[tool.black]
line-length = 120
skip-string-normalization = false
skip-magic-trailing-comma = true

[tool.poetry]
name = "devstore"
version = "0.1.0"
description = "A small utility tool for programmers"
authors = ["Abdul <abdul@abdulhani.com>"]
license = "GPL v3"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"
pyinstaller = "^5.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
